--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+
+  "homepage" : "https://marcorx.github.io/jammming/build/",
 }
