--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jammming",
   "version": "0.1.0",
-  "homepage" : "https://marcorx.github.io/jammming/build/",
+  "homepage": "https://marcorx.github.io/jammming/build/",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
@@ -13,5 +13,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
